--- a/app/src/main/res/layout/skyscraper_action_rv_item.xml
+++ b/app/src/main/res/layout/skyscraper_action_rv_item.xml
@@ -2,9 +2,6 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <data></data>
-
-
     <EditText
         android:id="@+id/txt_action_description"
         android:layout_width="match_parent"
@@ -13,9 +10,12 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="5dp"
-        android:autofillHints="Actiebeschrijving"
         android:background="@drawable/background_action_rv"
+        android:inputType="text"
+        android:autofillHints="@string/beschrijving_actie"
+        android:hint="@string/beschrijving_actie"
         android:paddingStart="20dp"
+        android:paddingEnd="20dp"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
