--- a/app/src/main/res/layout/skyscraper_subgoal_rv_item.xml
+++ b/app/src/main/res/layout/skyscraper_subgoal_rv_item.xml
@@ -6,10 +6,12 @@
         android:id="@+id/txt_subgoal_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:ellipsize="end"
         android:gravity="center_vertical"
         android:paddingStart="5dp"
+        android:paddingEnd="5dp"
         android:singleLine="true"
         android:textColor="@color/color_white"
         app:layout_constraintBottom_toBottomOf="parent"
