--- a/app/src/main/res/drawable/empty_shape.xml
+++ b/app/src/main/res/drawable/empty_shape.xml
@@ -1,2 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" />
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <size android:width="33.57dp" android:height="42.55dp" />
+</shape>
