--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -107,6 +107,61 @@
             app:layout_constraintEnd_toEndOf="@+id/skyscraper_elevator"
             app:layout_constraintTop_toTopOf="@+id/guide_skyscraper_top_floors" />
 
+        <!--rope-->
+        <ImageView
+            android:id="@+id/skyscraper_rope_middle"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@null"
+            android:onClick="@{()->goalViewModel.setReachGoalWay(ReachGoalWay.Rope)}"
+            android:src="@drawable/skyscraper_rope_middle"
+            app:layout_constraintBottom_toTopOf="@+id/skyscraper_rope_bottom"
+            app:layout_constraintEnd_toEndOf="@+id/guide_rope_end"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/skyscraper"
+            app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
+
+        <ImageView
+            android:id="@+id/skyscraper_rope_top"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:contentDescription="@null"
+            android:scaleType="fitXY"
+            android:src="@drawable/skyscraper_rope_top"
+            app:layout_constraintStart_toEndOf="@+id/skyscraper"
+            app:layout_constraintEnd_toEndOf="@+id/guide_rope_end"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
+
+        <ImageView
+            android:id="@+id/skyscraper_rope_bottom"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:translationX="-2dp"
+            android:contentDescription="@null"
+            android:scaleType="fitXY"
+            android:src="@drawable/skyscraper_rope_bottom"
+            app:layout_constraintBottom_toTopOf="@+id/guide_skyscraper_stairs_bottom_middle"
+            app:layout_constraintEnd_toStartOf="@+id/guide_panel_start"
+            app:layout_constraintStart_toStartOf="@+id/guide_rope_end" />
+
+        <be.hogent.faith.faith.skyscraper.goal.VerticalSeekBar
+            android:id="@+id/skyscraper_rope_seekbar"
+            android:layout_width="19dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="20dp"
+            android:background="@android:color/transparent"
+            android:color="@android:color/transparent"
+            android:max="10"
+            android:progress="1"
+            android:progressDrawable="@android:color/transparent"
+            app:layout_constraintBottom_toTopOf="@+id/skyscraper_rope_bottom"
+            app:layout_constraintEnd_toEndOf="@+id/guide_rope_end"
+            app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
+        <!--end rope-->
         <!--right stairs-->
         <ImageView
             android:id="@+id/skyscraper_stairs_right10"
@@ -470,20 +525,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <be.hogent.faith.faith.skyscraper.goal.VerticalSeekBar
-            android:id="@+id/skyscraper_rope_seekbar"
-            android:layout_width="19dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="20dp"
-            android:background="@android:color/transparent"
-            android:color="@android:color/transparent"
-            android:max="10"
-            android:progress="1"
-            android:progressDrawable="@android:color/transparent"
-            app:layout_constraintBottom_toBottomOf="@+id/guide_skyscraper_bottom_floors"
-            app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintTop_toTopOf="@+id/guide_skyscraper_top_floors" />
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/skyscraper_rv_subgoals"
             android:layout_width="0dp"
@@ -602,13 +643,6 @@
             app:layout_constraintGuide_percent="0.40" />
 
         <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guide_skyscraper_test_slider"
-            android:layout_width="8dp"
-            android:layout_height="12dp"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.40" />
-
-        <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_panel_end"
             android:layout_width="8dp"
             android:layout_height="12dp"
@@ -701,10 +735,10 @@
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_skyscraper_rope_end"
-            android:layout_width="wrap_content"
+            android:layout_width="1dp"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.354" />
+            app:layout_constraintGuide_percent="0.36" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_panel_start"
@@ -719,6 +753,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.82" />
+
+        <ImageView
+            android:id="@+id/spinner_loading"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="@{goalViewModel.isLoading() == true ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/loading_spinner"
+            tools:visibility="gone" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
