--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -112,15 +112,12 @@
             android:id="@+id/skyscraper_rope_middle"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:contentDescription="@null"
             android:onClick="@{()->goalViewModel.setReachGoalWay(ReachGoalWay.Rope)}"
             android:src="@drawable/skyscraper_rope_middle"
-            app:layout_constraintBottom_toTopOf="@+id/skyscraper_rope_bottom"
-            app:layout_constraintEnd_toEndOf="@+id/guide_rope_end"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
+            app:layout_constraintEnd_toEndOf="@+id/skyscraper_rope_top"
+            app:layout_constraintTop_toBottomOf="@+id/skyscraper_rope_top" />
 
         <ImageView
             android:id="@+id/skyscraper_rope_top"
@@ -130,9 +127,9 @@
             android:contentDescription="@null"
             android:scaleType="fitXY"
             android:src="@drawable/skyscraper_rope_top"
-            app:layout_constraintStart_toEndOf="@+id/skyscraper"
             app:layout_constraintEnd_toEndOf="@+id/guide_rope_end"
             app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@+id/skyscraper"
             app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
 
         <ImageView
