Goal cloning Bugfixing : back in youtube video Bugfixing : recyclerview details shows drawing thumbnail iso text icon

--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -109,32 +109,18 @@
 
         <!--rope-->
         <ImageView
-            android:id="@+id/skyscraper_rope_middle"
+            android:id="@+id/skyscraper_rope"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:contentDescription="@null"
             android:onClick="@{()->goalViewModel.setReachGoalWay(ReachGoalWay.Rope)}"
-            android:src="@drawable/skyscraper_rope_middle"
+            android:src="@drawable/skyscraper_rope"
             app:layout_constraintBottom_toBottomOf="@+id/skyscraper_rope_bottom"
             app:layout_constraintEnd_toEndOf="@+id/guide_skyscraper_rope_end"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
-
-        <ImageView
-            android:id="@+id/skyscraper_rope_top"
-            android:layout_width="0dp"
-            android:adjustViewBounds="true"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:contentDescription="@null"
-            android:scaleType="fitXY"
-            android:src="@drawable/skyscraper_rope_top"
-            app:layout_constraintStart_toEndOf="@+id/skyscraper"
-            app:layout_constraintEnd_toEndOf="@+id/guide_skyscraper_rope_end"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintTop_toBottomOf="@+id/guide_skyscraper_stairs_top_middle" />
 
         <ImageView
@@ -142,8 +128,6 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
-            android:layout_marginEnd="8dp"
-            android:translationX="-5dp"
             android:contentDescription="@null"
             android:scaleType="fitXY"
             android:src="@drawable/skyscraper_rope_bottom"
@@ -591,6 +575,7 @@
             android:layout_height="0dp"
             android:background="@drawable/rectangle_white"
             android:orientation="vertical"
+            android:scrollbars="vertical"
             app:cardCornerRadius="30dp"
             app:cardElevation="0dp"
             app:layout_constraintBottom_toBottomOf="@+id/skyscraper"
