--- a/app/src/main/res/layout/fragment_view_youtube_video.xml
+++ b/app/src/main/res/layout/fragment_view_youtube_video.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/youtube_video_bg"
@@ -32,8 +30,7 @@
                 android:id="@+id/seekbar_yt_video"
                 android:layout_width="443dp"
                 android:layout_height="wrap_content"
-                android:progressDrawable="@drawable/audio_seekbar_progress"
-                />
+                android:progressDrawable="@drawable/audio_seekbar_progress" />
 
             <TextView
                 android:id="@+id/text_duration_yt_video"
@@ -63,6 +60,7 @@
                 android:layout_height="70dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/color_white"
+                android:contentDescription="@null"
                 app:srcCompat="@drawable/button_record_stop" />
 
             <View
@@ -78,6 +76,7 @@
                 android:layout_height="70dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/color_white"
+                android:contentDescription="@null"
                 android:tint="#0000FF"
                 app:srcCompat="@drawable/button_audio_play" />
 
@@ -94,6 +93,7 @@
                 android:layout_height="70dp"
                 android:layout_weight="1"
                 android:backgroundTint="@color/color_white"
+                android:contentDescription="@null"
                 android:tint="#16F48A"
                 app:srcCompat="@drawable/button_audio_pause" />
 
@@ -109,8 +109,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="70dp"
                 android:layout_weight="1"
-                android:src="@drawable/ic_fullscreen_black_24dp"
-                android:backgroundTint="@color/colorTransparent" />
+                android:backgroundTint="@color/colorTransparent"
+                android:contentDescription="@null"
+                android:src="@drawable/ic_fullscreen_black_24dp" />
         </LinearLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -130,6 +131,7 @@
                 android:layout_marginStart="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toTopOf="@+id/img_cinema_view_left3"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_cinema_view_left1" />
@@ -141,6 +143,7 @@
                 android:layout_marginStart="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toTopOf="@+id/img_cinema_view_left4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_cinema_view_left2" />
@@ -152,6 +155,7 @@
                 android:layout_marginStart="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_cinema_view_left3" />
@@ -163,6 +167,7 @@
                 android:layout_marginStart="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toTopOf="@+id/img_cinema_view_left2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_back_yt_video" />
@@ -173,10 +178,11 @@
                 android:layout_height="@dimen/material_icon_height"
                 android:layout_marginStart="@dimen/margin_corner_button"
                 android:layout_marginTop="@dimen/margin_corner_button"
-                android:backgroundTint="@android:color/transparent"
+                android:background="@drawable/ic_return"
+                android:contentDescription="@string/cancel"
+                android:scaleType="fitXY"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_btn_back_black" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/img_cinema_view_right1"
@@ -185,6 +191,7 @@
                 android:layout_marginEnd="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toTopOf="@+id/img_cinema_view_right2"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btn_back_yt_video" />
@@ -196,6 +203,7 @@
                 android:layout_marginEnd="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toTopOf="@+id/img_cinema_view_right3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_cinema_view_right1" />
@@ -207,6 +215,7 @@
                 android:layout_marginEnd="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toTopOf="@+id/img_cinema_view_right4"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_cinema_view_right2" />
@@ -218,6 +227,7 @@
                 android:layout_marginEnd="64dp"
                 android:background="@drawable/img_filmstrip_side"
                 android:backgroundTint="#233D4C"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/img_cinema_view_right3" />
@@ -230,6 +240,7 @@
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/rv_background"
                 android:backgroundTint="#16F48A"
+                android:contentDescription="@null"
                 android:scaleY="-1"
                 app:layout_constraintEnd_toStartOf="@+id/img_cinema_view_right1"
                 app:layout_constraintStart_toEndOf="@+id/img_cinema_view_left1"
@@ -243,6 +254,7 @@
                 android:layout_marginEnd="32dp"
                 android:background="@drawable/rv_background"
                 android:backgroundTint="#16F48A"
+                android:contentDescription="@null"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/img_cinema_view_right4"
                 app:layout_constraintStart_toEndOf="@+id/img_cinema_view_left4" />
@@ -253,6 +265,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:backgroundTint="@android:color/transparent"
+                android:contentDescription="@null"
                 android:cropToPadding="false"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -263,6 +276,7 @@
                 android:id="@+id/layer_fullscreen_yt_player"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:contentDescription="@null"
                 android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
