--- a/app/src/main/res/layout/skyscraper_action_rv_item.xml
+++ b/app/src/main/res/layout/skyscraper_action_rv_item.xml
@@ -11,6 +11,9 @@
         android:layout_marginEnd="40dp"
         android:layout_marginBottom="5dp"
         android:background="@drawable/background_action_rv"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:inputType="text"
         android:autofillHints="@string/beschrijving_actie"
         android:hint="@string/beschrijving_actie"
