--- a/app/src/main/res/layout/skyscraper_subgoal_rv_item.xml
+++ b/app/src/main/res/layout/skyscraper_subgoal_rv_item.xml
@@ -13,6 +13,9 @@
         android:paddingStart="5dp"
         android:paddingEnd="5dp"
         android:singleLine="true"
+        android:clickable="true"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:textColor="@color/color_white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
