--- a/app/src/main/res/xml/editdetail_slide_avatar.xml
+++ b/app/src/main/res/xml/editdetail_slide_avatar.xml
@@ -35,7 +35,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/gl_editDetail_vertical"
-            app:layout_constraintTop_toTopOf="parent"></Constraint>
+            app:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@id/textView_editDetail_avatar"
             android:layout_width="0dp"
@@ -43,6 +43,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/gl_editDetail_vertical"
-            app:layout_constraintTop_toTopOf="parent"></Constraint>
+            app:layout_constraintTop_toTopOf="parent" />
     </ConstraintSet>
 </MotionScene>
