--- a/app/src/main/res/drawable/btn_bg.xml
+++ b/app/src/main/res/drawable/btn_bg.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <solid android:color="@color/green_light" />
-            <corners android:radius="36dp"></corners>
+            <corners android:radius="36dp" />
         </shape>
     </item>
 </selector>
