--- a/app/src/main/res/layout/skyscraper_action_rv_item.xml
+++ b/app/src/main/res/layout/skyscraper_action_rv_item.xml
@@ -2,28 +2,44 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="40dp"
+        android:layout_marginBottom="5dp"
+        android:orientation="horizontal">
+
     <EditText
         android:id="@+id/txt_action_description"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="40dp"
-        android:layout_marginBottom="5dp"
         android:background="@drawable/background_action_rv"
         android:clickable="true"
-        android:focusable="true"
-        android:focusableInTouchMode="true"
         android:inputType="text"
         android:autofillHints="@string/beschrijving_actie"
         android:hint="@string/beschrijving_actie"
         android:paddingStart="20dp"
-        android:paddingEnd="20dp"
+        android:paddingEnd="60dp"
         android:paddingTop="20dp"
         android:paddingBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageButton
+        android:id="@+id/swap"
+        android:layout_marginLeft="-60dp"
+        style="?android:buttonBarButtonStyle"
+        android:paddingBottom="5dp"
+        android:contentDescription="@null"
+        android:scaleType="fitXY"
+        android:src="@drawable/ic_gaverder"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_gravity="center"/>
+    </LinearLayout>
 
 </layout>
