--- a/app/src/main/res/layout/fragment_skyscraper_goal.xml
+++ b/app/src/main/res/layout/fragment_skyscraper_goal.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -742,18 +743,10 @@
             android:orientation="horizontal"
             app:layout_constraintGuide_percent="0.82" />
 
-        <ImageView
-            android:id="@+id/spinner_loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@null"
-            android:visibility="@{goalViewModel.isLoading() == true ? View.VISIBLE : View.GONE}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/loading_spinner"
-            tools:visibility="gone" />
+        <include
+            android:id="@+id/loading_spinner_skyscraper_goal"
+            layout="@layout/loading_spinner"
+            bind:viewModel="@{goalViewModel}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
