add loading spinner to backpack

--- a/app/src/main/res/layout/fragment_backpack.xml
+++ b/app/src/main/res/layout/fragment_backpack.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:bind="http://schemas.android.com/apk/res-auto">
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="backpackViewModel"
             type="be.hogent.faith.faith.backpack.BackpackViewModel" />
+
         <import type="android.view.View" />
     </data>
 
@@ -40,7 +42,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            bind:backpackViewModel="@{backpackViewModel}"/>
+            bind:backpackViewModel="@{backpackViewModel}" />
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_undo_horizontal"
@@ -106,9 +108,9 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_corner_button"
             android:background="@drawable/ic_trashcan"
+            android:clickable="@{backpackViewModel.detailsPresent == true? true : false}"
             android:contentDescription="@string/rv_btn_delete_detail"
             android:onClick="@{() -> backpackViewModel.onDeleteClicked()}"
-            android:clickable="@{backpackViewModel.detailsPresent == true? true : false}"
             app:layout_constraintStart_toStartOf="@+id/guide_items_vertical_start"
             app:layout_constraintTop_toTopOf="@+id/guide_rv_horizontal_2"
             app:srcCompat="@drawable/ic_trashcan" />
@@ -117,25 +119,25 @@
             android:id="@+id/btn_backpack_search"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/search_btn"
             android:alpha="@{backpackViewModel.deleteModeEnabled == true ? 0.5F : 1F}"
+            android:background="@drawable/search_btn"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
+            android:contentDescription="@string/button_filter_menu"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/search_btn"
-            android:contentDescription="@string/button_filter_menu" />
+            app:srcCompat="@drawable/search_btn" />
 
         <ImageButton
             android:id="@+id/btn_backpack_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:onClick="@{() -> backpackViewModel.onAddButtonClicked()}"
             android:alpha="@{backpackViewModel.deleteModeEnabled == true ? 0.5F : 1F}"
             android:background="@drawable/add_btn"
             android:clickable="@{backpackViewModel.viewButtons == true ? true : false}"
+            android:contentDescription="@string/button_open_add_menu"
+            android:onClick="@{() -> backpackViewModel.onAddButtonClicked()}"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:contentDescription="@string/button_open_add_menu" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ImageButton
             android:id="@+id/btn_backpack_draw_cancel"
@@ -149,9 +151,12 @@
             android:contentDescription="@string/cancel"
             android:onClick="@{() -> backpackViewModel.goToCityScreen()}"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-             />
+            app:layout_constraintTop_toTopOf="parent" />
 
+        <include
+            android:id="@+id/loading_spinner_backpack"
+            layout="@layout/loading_spinner"
+            bind:viewModel="@{backpackViewModel}" />
 
     </androidx.constraintlayout.motion.widget.MotionLayout>
 </layout>
