--- a/app/src/main/res/layout/fragment_cinema_start.xml
+++ b/app/src/main/res/layout/fragment_cinema_start.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:bind="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
@@ -201,6 +202,11 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/rv_container"
             app:srcCompat="@drawable/ic_btn_maak_filmpje" />
+
+        <include
+            android:id="@+id/loading_spinner_cinema_start"
+            layout="@layout/loading_spinner"
+            bind:viewModel="@{cinemaOverviewViewModel}" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
