--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -28,9 +28,13 @@
         <item>@drawable/speelplein</item>
     </array>
     <array name="templates_metaphors">
-        <item>@drawable/template_lightbulb</item>
-        <item>@drawable/template_lightbulb</item>
-        <item>@drawable/template_lightbulb</item>
-        <item>@drawable/template_lightbulb</item>
+        <item>@drawable/bril</item>
+        <item>@drawable/gevoelsthermometer</item>
+        <item>@drawable/stoplicht</item>
+        <item>@drawable/toverstaf</item>
+        <item>@drawable/vulkaan</item>
+        <item>@drawable/zeeverdriet</item>
+        <item>@drawable/cognitievedriehoek</item>
+        <item>@drawable/conflictcyclus</item>
     </array>
 </resources>
